--- a/app/src/main/res/layout/nav_header_main_login.xml
+++ b/app/src/main/res/layout/nav_header_main_login.xml
@@ -11,19 +11,23 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <android.widget.Button
-        android:id="@+id/iniciarSesionDra"
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/header_image"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_gravity="center"
+        android:padding="4dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/fotopredeterminada"
+        android:scaleType="centerCrop"
+        app:shapeAppearanceOverlay="@style/roundedImageViewRounded"/>
+
+    <TextView
+        android:id="@+id/header_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/iniciar_sesi_n"
-        android:layout_marginTop="40dp"
+        android:text="Texto de ejemplo"
         android:textColor="@color/white"
-        android:background="@drawable/boton_redondo"
-        android:drawableStart="@drawable/ic_menu_people"
-        android:drawablePadding="8dp"
-        android:padding="20dp" />
-
-
-
+        android:textSize="18sp" />
 
 </LinearLayout>
