--- a/app/src/main/res/layout/fragment_anadir_plato.xml
+++ b/app/src/main/res/layout/fragment_anadir_plato.xml
@@ -11,6 +11,16 @@
         android:padding="10dp"
         android:orientation="vertical">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/a_adir_plato"
+            android:textSize="25sp"
+            android:textAlignment="center"
+            android:layout_marginTop="10dp"
+            android:layout_marginBottom="10dp"
+            android:textStyle="bold"/>
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/imagenPlato"
             android:layout_width="150dp"
@@ -20,16 +30,31 @@
             android:clickable="true"
             android:src="@drawable/fotopredeterminada"
             android:focusable="true" />
-
-
-
-    <Button
-        android:id="@+id/guardarPlatos"
-        android:background="@color/botones"
-        android:text="@string/editar"
-        android:layout_marginTop="30dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        <android.widget.EditText
+            android:id="@+id/nombreTipo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:hint="@string/nombre"
+            android:textColor="@color/black"
+            android:textColorHint="@color/black"
+            android:autofillHints="" />
+        <android.widget.EditText
+            android:id="@+id/descripcionTipo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:textColor="@color/black"
+            android:hint="@string/descripcion"
+            android:textColorHint="@color/black"
+            android:autofillHints="" />
+        <Button
+            android:id="@+id/guardarPlatos"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="30dp"
+            android:background="@color/botones"
+            android:text="@string/guardar" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
