--- a/app/src/main/res/layout/fragment_reserva.xml
+++ b/app/src/main/res/layout/fragment_reserva.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:textColor="@color/black"
         android:inputType="numberDecimal"
         android:textStyle="bold" />
 
@@ -51,7 +52,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="15dp">
 
         <Button
@@ -59,12 +60,11 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:textStyle="bold"
             android:text="@string/fechaBtn" />
 
         <EditText
             android:id="@+id/efecha"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="16dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginStart="8dp"
         android:layout_marginEnd="15dp">
 
         <Button
@@ -100,14 +100,14 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textStyle="bold"
             android:text="@string/horaBtn" />
 
         <EditText
             android:id="@+id/ehora"
-            android:layout_width="200dp"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
