--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/a_adir_plato"
+            android:text="@string/modificar_plato"
             android:textSize="35sp"
             android:textAlignment="center"
             android:layout_marginTop="10dp"
@@ -22,7 +22,7 @@
             android:textStyle="bold"/>
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/imagenPlato"
+            android:id="@+id/modificarImagen"
             android:layout_width="150dp"
             android:layout_height="150dp"
             android:layout_gravity="center"
@@ -31,7 +31,6 @@
             android:src="@drawable/plato"
             android:focusable="true" />
         <android.widget.EditText
-            android:id="@+id/nombreTipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -40,7 +39,6 @@
             android:textColorHint="@color/black"
             android:autofillHints="" />
         <android.widget.EditText
-            android:id="@+id/descripcionTipo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -49,7 +47,6 @@
             android:textColorHint="@color/black"
             android:autofillHints="" />
         <Button
-            android:id="@+id/guardarPlatos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
