--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
     <Spinner
-        android:id="@+id/sListaCategorias"
+        android:id="@+id/sListaPlatos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -48,7 +48,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sListaCategorias" />
+        app:layout_constraintTop_toBottomOf="@+id/sListaPlatos" />
 
 
     <ImageView
