--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -117,7 +117,7 @@
 
 
     <Button
-        android:id="@+id/btnModificarCategoria"
+        android:id="@+id/btnModificarPlato"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="MODIFICAR"
