--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -74,7 +74,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageViewModificar" />
 
     <EditText
-        android:id="@+id/etValorCategoria"
+        android:id="@+id/etValorNombre"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
@@ -98,7 +98,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etValorCategoria" />
+        app:layout_constraintTop_toBottomOf="@+id/etValorNombre" />
 
     <EditText
         android:id="@+id/etDescripcionModificada"
