--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -20,4 +20,10 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="SpinnerStyle" parent="Widget.AppCompat.Spinner">
+        <item name="android:dropDownVerticalOffset">40dp</item>
+        <item name="android:paddingLeft">8dp</item>
+        <item name="android:tint">#000000</item>
+    </style>
 </resources>
