--- a/app/src/main/res/layout/fragment_anadir_producto.xml
+++ b/app/src/main/res/layout/fragment_anadir_producto.xml
@@ -19,7 +19,7 @@
         android:layout_width="120dp"
         android:layout_marginTop="15dp"
         android:layout_height="120dp"
-        android:src="@drawable/fotopredeterminada"
+        android:src="@drawable/plato"
         android:padding="0dp" />
 
     <LinearLayout
@@ -64,6 +64,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
         android:padding="1dp">
 
         <EditText
@@ -82,7 +84,6 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
-            android:inputType="numberDecimal"
             android:hint="@string/precio" />
         <EditText
             android:id="@+id/calories_producto"
@@ -91,7 +92,6 @@
             android:layout_weight="1"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
-            android:inputType="numberDecimal"
             android:hint="@string/calorias" />
 
     </LinearLayout>
@@ -141,6 +141,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginEnd="10dp"
         android:layout_height="wrap_content"
+        android:background="@color/botones"
         android:text="@string/a_adir_producto"/>
 
 </LinearLayout>
