--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -29,17 +29,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView16" />
 
-    <android.widget.Spinner
+    <Spinner
         android:id="@+id/sListaPlatos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="30dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
-        android:spinnerStyle="@style/SpinnerStyle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView17" />
+        app:layout_constraintTop_toBottomOf="@+id/textView17"/>
     <TextView
         android:id="@+id/textView20"
         android:layout_width="wrap_content"
@@ -124,9 +123,12 @@
 
     <Button
         android:id="@+id/btnModificarPlato"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/modificar"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:background="@color/botones"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         tools:layout_editor_absoluteY="564dp"
