--- a/app/src/main/res/layout/fragment_modificar_productos.xml
+++ b/app/src/main/res/layout/fragment_modificar_productos.xml
@@ -16,9 +16,9 @@
 
     <!-- Spinner -->
     <Spinner
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
         android:id="@+id/my_spinner_producto"
-        android:padding="16dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown" />
@@ -44,8 +44,8 @@
 
     <Spinner
         android:id="@+id/my_spinner_tipos"
-        android:padding="16dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="18dp"
+        android:layout_marginBottom="8dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:spinnerMode="dropdown" />
