--- a/app/src/main/res/layout/listitem_tipo_producto.xml
+++ b/app/src/main/res/layout/listitem_tipo_producto.xml
@@ -43,6 +43,7 @@
             android:layout_height="wrap_content"
             android:gravity="end"
             android:text="precio"
+            android:layout_marginEnd="10dp"
             android:textStyle="bold"
             android:textSize="15sp"/>
     </LinearLayout>
