--- a/app/src/main/res/layout/lista.xml
+++ b/app/src/main/res/layout/lista.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Título"
+        android:text=""
         android:textSize="24sp"
         android:textStyle="bold"
         android:paddingTop="10dp"
