--- a/app/src/main/res/layout/fragment_modificar_plato.xml
+++ b/app/src/main/res/layout/fragment_modificar_plato.xml
@@ -84,8 +84,9 @@
         android:layout_marginEnd="30dp"
         android:ems="10"
         android:hint="@string/nombre"
-        android:textColor="@color/black"
+        android:backgroundTint="@color/black"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -111,10 +112,11 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="30dp"
         android:ems="10"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:hint="@string/descripcion"
         android:inputType="text"
-        android:textColorHint="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView19" />
