--- a/app/src/main/res/layout/fragment_modificar_productos.xml
+++ b/app/src/main/res/layout/fragment_modificar_productos.xml
@@ -12,6 +12,8 @@
         android:textSize="30sp"
         android:textStyle="bold"
         android:textAlignment="center"
+        android:backgroundTint="@color/black"
+        android:textColorHint="@color/black"
         android:text="@string/seleccione_un_producto" />
 
     <!-- Spinner -->
@@ -95,6 +97,7 @@
 
         <EditText
             android:id="@+id/namemodificada"
+            android:backgroundTint="@color/black"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -105,6 +108,7 @@
         <EditText
             android:id="@+id/pricemodificado"
             android:layout_width="0dp"
+            android:backgroundTint="@color/black"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/black"
@@ -114,6 +118,7 @@
         <EditText
             android:id="@+id/caloriasmodificada"
             android:layout_width="0dp"
+            android:backgroundTint="@color/black"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/black"
@@ -137,10 +142,11 @@
         android:id="@+id/ingredienteModificadas"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
         android:textAlignment="center"
         android:layout_marginTop="10dp"
+        android:backgroundTint="@color/black"
         android:textColorHint="@color/black"
+        android:textColor="@color/black"
         android:hint="@string/ingredientes" />
 
     <Button
