--- a/app/src/main/res/layout/fragment_reserva.xml
+++ b/app/src/main/res/layout/fragment_reserva.xml
@@ -34,6 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:textAlignment="center"
+        android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:inputType="numberDecimal"
         android:textStyle="bold" />
@@ -68,6 +69,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="center"
+            android:textColorHint="@color/black"
             android:textColor="@color/black"
             android:textStyle="bold" />
 
@@ -107,6 +109,7 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:textColorHint="@color/black"
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold" />
