mirar si tengo que cambiar algo.

--- a/app/src/main/res/layout/fragment_eliminar_productos.xml
+++ b/app/src/main/res/layout/fragment_eliminar_productos.xml
@@ -45,10 +45,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="166dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
         android:text="@string/eliminar_producto"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/spinnerEliminar" />
+        app:layout_constraintTop_toBottomOf="@+id/imEliminarProducto" />
+
+    <ImageView
+        android:id="@+id/imEliminarProducto"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/spinnerEliminar"
+        tools:srcCompat="@tools:sample/avatars" />
 </androidx.constraintlayout.widget.ConstraintLayout>
