--- a/app/src/main/res/layout/fragment_reserva.xml
+++ b/app/src/main/res/layout/fragment_reserva.xml
@@ -33,9 +33,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginEnd="40dp"
         android:textAlignment="center"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
+        android:backgroundTint="@color/black"
+        android:hint="@string/numero_de_comensales"
         android:inputType="numberDecimal"
         android:textStyle="bold" />
 
@@ -71,6 +75,7 @@
             android:textAlignment="center"
             android:textColorHint="@color/black"
             android:textColor="@color/black"
+            android:backgroundTint="@color/black"
             android:textStyle="bold" />
 
     </LinearLayout>
@@ -109,9 +114,10 @@
             android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:textColorHint="@color/black"
             android:textAlignment="center"
+            android:textColorHint="@color/black"
             android:textColor="@color/black"
+            android:backgroundTint="@color/black"
             android:textStyle="bold" />
 
 
