--- a/app/src/main/res/layout/fragment_eliminar_plato.xml
+++ b/app/src/main/res/layout/fragment_eliminar_plato.xml
@@ -47,7 +47,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="41dp"
         android:layout_marginEnd="16dp"
-        android:text="@string/eliminar_producto"
+        android:text="@string/eliminar_plato"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
