--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -48,10 +48,28 @@
         android:focusable="true"
         android:padding="16dp"
         android:paddingStart="25dp"
+        android:paddingEnd="25dp"
         android:text="@string/admin"
         android:textSize="18sp"
         android:textStyle="bold"
+        app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
+        app:drawableStartCompat="@drawable/baseline_manage_accounts_24"
+        tools:ignore="RtlSymmetry" />
+    <TextView
+        android:id="@+id/ip"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/admin"
+        android:layout_centerInParent="true"
+        android:clickable="true"
+        android:drawablePadding="8dp"
+        android:focusable="true"
+        android:padding="16dp"
+        android:paddingStart="25dp"
         android:paddingEnd="25dp"
+        android:text="IP"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:drawableEndCompat="@drawable/baseline_arrow_forward_ios_24"
         app:drawableStartCompat="@drawable/baseline_manage_accounts_24"
         tools:ignore="RtlSymmetry" />
@@ -60,7 +78,7 @@
         android:id="@+id/cerrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/admin"
+        android:layout_below="@+id/ip"
         android:layout_centerInParent="true"
         android:clickable="true"
         android:focusable="true"
